--- a/taskpane.html
+++ b/taskpane.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <div class="version-info" id="versionInfo" style="cursor: pointer;" title="Klicken zum Cache leeren und App neu laden">v2.17.1</div>
+        <div class="version-info" id="versionInfo">v2.17.2</div>
         
         <div id="emailInfo" class="email-info">
             Lade E-Mail...
@@ -80,6 +80,6 @@
         </div>
     </div>
 
-    <script src="taskpane.js?v=2.17.1"></script>
+    <script src="taskpane.js?v=2.17.2"></script>
 </body>
 </html>
