Remove 'Verloren' checkboxes and add AllOne quick links

--- a/taskpane.html
+++ b/taskpane.html
@@ -27,14 +27,6 @@
                 <span class="checkbox-label">Offtopic</span>
             </label>
             <label class="checkbox-item">
-                <input type="checkbox" id="verloren-preis" data-rating="verloren-preis">
-                <span class="checkbox-label">Verloren, Preis</span>
-            </label>
-            <label class="checkbox-item">
-                <input type="checkbox" id="verloren-zeit" data-rating="verloren-zeit">
-                <span class="checkbox-label">Verloren, Zeit</span>
-            </label>
-            <label class="checkbox-item">
                 <input type="checkbox" id="passt-nicht" data-rating="passt-nicht">
                 <span class="checkbox-label">Passt nicht, aber vllt zukünftig</span>
             </label>
@@ -42,6 +34,11 @@
                 <input type="checkbox" id="follow-up" data-rating="follow-up">
                 <span class="checkbox-label">Follow up</span>
             </label>
+        </div>
+
+        <div class="quick-links">
+            <a class="btn" href="https://go.enveon.de/widget/form/YLJXvWOYdtPVWDb0S0ci" target="_blank" rel="noopener noreferrer">Neue Anfrage (Telefon/Mail) in AllOne erfassen</a>
+            <a class="btn btn-secondary" href="https://app.all-one.io/v2/location/mQuST3AEkqT3w3s1mfor/opportunities/list" target="_blank" rel="noopener noreferrer">Pipe Anfrage öffnen</a>
         </div>
 
         <div class="action-buttons">
